Checking in filtering feature - need to figure out visibility bug

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -565,6 +565,7 @@ table {
 
 .RSVPRate {
   margin-top: 4px;
+  margin-bottom: 13px;
 }
 
 .RSVPRateLabel {
